# plato

./: .env  .gitignore  .gitignore.swp  .gitmodules  .pylintrc  Compute Canada.md  Dockerfile  Dockerfile_MindSpore  FedBuff_FEMNIST_lenet5_300_20_eachRound.sh  FedBuff_FEMNIST_lenet5_300_20_eachRound2.sh  Fedavg_FEMNIST_lenet5_500_20_eachRound.sh  Fedavg_emnist.sh  LICENSE  README.md  README_ENV.md  adaptive_hgb.py  c_emnist_normal.sh  celeba_test.py  client.py  config.py  config.yml  config_fedavg.conf  description.txt  dividers_test.py  dockerrun.sh  dockerrun_gpu.sh  edge_server.py  eval.sh  extract_wav_err_file.txt  fedavg_MNIST.sh  fedbuff_MNIST.sh  gpsolver.py  institution.py  mm_data_provide.py  multi_modal_fedavg.py  new_client_update_direction_1.pth  plato.py  plot.py  pyproject.toml  requirements.txt  (+30 more)
.github/: pull_request_template.md
adaptive_hgb/: adaptive_hgb_trainer.py
algorithms/: adaptive_freezing.py  adaptive_sync.py  base.py  fedavg.py  fedsarah.py  mistnet.py  registry.py  scaffold.py  split_learning.py
clients/: __init__.py  adaptive_freezing.py  adaptive_sync.py  base.py  diff_local_iteration.py  edge.py  fedcy.py  fednova.py  fedsarah.py  mistnet.py  registry.py  scaffold.py  simple.py  split_learning.py  tempo.py
datasets/: base.py  cifar10.py  cinic10.py  coco.py  fashion_mnist.py  mnist.py  mnist_mindspore.py  registry.py
datasources/: base.py  cifar10.py  cinic10.py  coco.py  fashion_mnist.py  huggingface.py  kinetics.py  mnist.py  mnist_mindspore.py  pascal_voc.py  registry.py  yolo.py
dist_utils/: setup.sh
dividers/: base.py  biased.py  iid.py  iid_mindspore.py  mixed.py  sharded.py
docker/: .bashrc  Dockerfile
docs/: Configuration.md  Deploy.md  Deploy_DigitalOcean_ver.md  Design.md  Examples.md  Implemented_Methods.md  Multimodal_FL.md  Pipfile  README.md  Reinforcement_Learning.md  Running.md  cc_requirements.txt  client.md  conf.py  configuration.md  deployment.md  development.md  examples.md  index.md  installation.md  misc.md  netlify.toml  pyproject.toml  quickstart.md  requirements.txt  running.md  server.md  trainer.md  uv_installation.md  uv_quickstart.md
docs/outdated_docs/: Reinforcement_Learning.md  Running.md
docs/patches/: base.py.patch  config.py.patch  huggingface.py.patch  patch_cc.sh  setup.py.patch
documentation/: README.md  mkdocs.yml
examples/: catalyst_example.py  custom_client.py  custom_model.py  custom_server.py  lenet5.py  plato_colab.ipynb
federated_unlearning_code/: README.md  loading_data.py  main_fed.py  main_unlearning.py  main_unlearning_baseline.py
institutions/: __init__.py  simple.py
mc_config/: dgpt2.yml
models/: __init__.py  base.py  base_mindspore.py  cifar_resnet.py  cifar_vgg.py  cifar_wideresnet.py  fashion_cnn.py  feedback_transformer.py  huggingface.py  layers.py  lenet5.py  lenet5_mindspore.py  lenet5_pytorch.py  mnist_cnn.py  model.py  registry.py  resnet.py  resnet_pytorch.py  vgg.py  vgg_pytorch.py  wideresnet.py  wideresnet_pytorch.py  yolo.py
plato/: client.py  config.py
rl_agent/: __init__.py  agent.py
rl_envs/: __init__.py  environment.py
samplers/: all_inclusive.py  base.py  dirichlet.py  iid.py  mixed.py  registry.py
servers/: __init__.py  adaptive_freezing.py  adaptive_sync.py  base.py  edge.py  fedavg.py  fedavg_cs.py  fedcc.py  fedcs.py  fedcy.py  fednova.py  fedrl.py  fedsarah.py  mistnet.py  registry.py  rhythm.py  scaffold.py  split_learning.py  tempo.py  wsclient.py  wsserver.py
tests/: checkpoint_tests.py  client_tests.py  config.conf  config.yml  config_tests.py  data_tests.py  dataloader_tests.py  dists_tests.py  dividers_test.py  fedavg_tests.py  lr_schedule_tests.py  lr_scheduler_tests.py  model_tests.py  personalization_tests.py  plato_tests.py  sampler_test.py  sampler_test_utils.py  sampler_tests.py  samplers_tests.py  test_utils.py  unary_encoding_tests.py  utils.py
trainers/: adaptive_freezing.py  adaptive_sync.py  base.py  basic.py  fednova.py  fedprox_optimizer.py  fedsarah.py  huggingface.py  mistnet.py  mistnet_mindspore.py  optimizers.py  pascal_voc.py  registry.py  scaffold.py  split_learning.py  trainer.py  yolo.py  (+1 more)
(+5187 files in other folders)
