[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plato-learn"
version = "1.0"
description = "Plato: a research framework for federated learning"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"

dependencies = [
    "aiohttp>=3.12.15",
    "boto3>=1.40.41",
    "datasets>=4.1.1",
    "evaluate>=0.4.6",
    "gym>=0.26.2",
    "lightly>=1.5.22",
    "numpy>=2.3.3",
    "opacus>=1.5.4",
    "python-socketio>=5.13.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "timm>=1.0.20",
    "torch>=2.8.0",
    "torch-optimizer>=0.3.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
    "zstd>=1.5.7.2",
]

[project.optional-dependencies]
# Development tools
dev = ["pytest>=7.0.0", "black>=22.0.0", "pylint>=2.15.0"]

[project.urls]
Homepage = "https://github.com/TL-System/plato"
Repository = "https://github.com/TL-System/plato"
Documentation = "https://platodocs.netlify.app/"

# Basic tool configuration
[tool.black]
line-length = 88

[tool.hatch.build.targets.wheel]
packages = ["plato"]
