[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Baochun Li <bli@ece.toronto.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^5.1.1"
furo = "^2022.6.21"
myst-parser = "^0.18.0"
sphinx-copybutton = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
